--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
+    "@studio-freight/lenis": "^1.0.28",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.5",
     "lucide-react": "^0.292.0",
-    "next": "14.0.3",
+    "next": "latest",
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
