web3, redeem page, mint - web3 integration - siwe - redeem page base - token gate - constants - check-owner and check-supply

--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@studio-freight/lenis": "^1.0.28",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "connectkit": "^1.5.3",
+    "connectkit-next-siwe": "^0.2.0",
     "framer-motion": "^10.16.5",
     "lucide-react": "^0.292.0",
-    "next": "latest",
+    "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
+    "siwe": "^2.1.4",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^1.19.8",
+    "wagmi": "^1.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -29,6 +34,9 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "encoding": "^0.1.13",
+    "lokijs": "^1.5.12",
+    "pino-pretty": "^10.2.3",
     "postcss": "^8",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
