--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@studio-freight/lenis": "^1.0.28",
+    "@supabase/supabase-js": "^2.38.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "connectkit": "^1.5.3",
@@ -25,7 +26,8 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^1.19.8",
-    "wagmi": "^1.4.7"
+    "wagmi": "^1.4.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
