--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@studio-freight/lenis": "^1.0.28",
     "@supabase/supabase-js": "^2.38.5",
+    "@vercel/kv": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "connectkit": "^1.5.3",
